1. Arquitectura Hexagonal (Sprints A–M)
Sprint A — Shared Kernel + Auth BC

Qué se completó: Creación del shared kernel (com.qa.platform.shared) y migración de la capa de autenticación a arquitectura hexagonal.
Problema resuelto: El código de autenticación estaba acoplado directamente a la infraestructura Spring Security, haciendo imposible testear la lógica de dominio sin levantar el contexto de Spring.
Cómo se resolvió: Se creó el bounded context auth con domain model puro, puertos de entrada/salida y un AuthApplicationService como orchestrator. ArchUnit guards configurados para prevenir violaciones cruzadas.

Sprint B — User BC + Health BC

Qué se completó: Migración del bounded context de usuarios y del módulo de health check a arquitectura hexagonal. Implementación de JWT token versioning para invalidación inmediata.
Problema resuelto: No había forma de invalidar sessions activas cuando un usuario era desactivado o bloqueado. El token seguía siendo válido hasta su expesolvió: Se creó UserProfile aggregate con campo tokenVersion. Al deshabilitar/bloquear un usuario, se incrementa tokenVersion. El filtro JWT verifica que el tokenVersion del token coincida con el del aggregate — si no coincide, rechaza la petición. UserSessionInvalidationPort provee el contrato. Total: 9 reglas ArchUnit activas.

Sprint C — Project BC + Execution BC (parcial)

Qué se completó: Migración de los BCs de proyecto y ejecución a arquitectura hexagonal. Domain models (Project AR, Suite, Feature, Scenario, Environment, state machine de ejecución), puertos de repositorio y controllers hexagonales.
Problema resuelto: Las capas de proyecto y ejecución dependían directamente de JPA entities y Spring context en todos los niveles, mezclando dominio con infraestructura.
Cómo se resolvió: Separación estricta en domain/model, domain/port, application/service, infrastructure/persistence con mappers JPA↔domain. 6 legacy controllers desactivados en Sprint F.

Sprint E — Catalog BC + Ipletó: Migración